[gd_scene load_steps=3 format=3 uid="uid://3rgskf5ypkbr"]

[ext_resource type="Script" uid="uid://dwdwumew8d2x1" path="res://core/ui/tankHUD/tank_hud.gd" id="1_rmuxb"]
[ext_resource type="PackedScene" uid="uid://c6qmtkj61lgup" path="res://core/ui/errorPopup/ErrorPopupManager.tscn" id="2_ydgh2"]

[node name="TankHud" type="CanvasLayer"]
script = ExtResource("1_rmuxb")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Close" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"

[node name="AddFish" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Add Fish"

[node name="Delete" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Delete"

[node name="ErrorPopupManager" parent="." instance=ExtResource("2_ydgh2")]

[connection signal="pressed" from="MarginContainer/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="MarginContainer/AddFish" to="." method="_on_add_fish_pressed"]
[connection signal="pressed" from="MarginContainer/Delete" to="." method="_on_delete_pressed"]
